<resources>
    <string name="app_name">Assignment01</string>
    <string name="First_name">Muhammad Adeel Sajid</string>
    <string name="oky_button">Next</string>
    <string name="name_text">Enter...</string>
    <string name="checkbox">Select</string>
    <string name="Radio_yes">Yes</string>
    <string name="Radio_no">No</string>
    <string name="radio_name">Are You Sure</string>
    <string name="switchs">ON/OFF</string>
    <string name="searchs">Search</string>
    <string name="drop">Dropdown</string>
    <string-array name="droparray">
        <item>one</item>
        <item>two</item>
        <item>three</item>
        <item>four</item>

    </string-array>

</resources>
