<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.muhammadadeel.assignment01.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/First_name"
        android:textColor="#4689C8"
        android:textStyle="italic"
        android:textAppearance="?android:textAppearanceLarge"
         />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:text="@string/oky_button"
        android:shadowColor="#0000"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/name_text"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        >

    </Spinner>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_marginTop="110dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radio_name"
        android:textColor="#4689C8"
        android:layout_marginTop="150dp"
        android:textStyle="italic"
        android:textAppearance="?android:textAppearanceLarge"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio_yes"
            android:textAppearance="?android:textAppearanceSmall"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Radio_no"
            android:textAppearance="?android:textAppearanceSmall"/>
    </RadioGroup>
    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/ratingBarStyleSmall"
        android:numStars="5"
        android:rating="3.5"
        android:stepSize="0.5"
        android:layout_marginTop="240dp"
        />
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceSmall"
        android:text="@string/switchs"
        android:layout_marginTop="260dp"
        android:paddingLeft="10dp"
        android:layout_marginLeft="150dp"/>
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        android:layout_marginTop="290dp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Image Search"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="20dp"
        android:textAppearance="?android:textAppearanceSmall"/>
    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="@string/searchs"
        android:layout_marginTop="310dp"
        android:layout_marginLeft="130dp"
        >

    </SearchView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Progress Bar"
        android:textAppearance="?android:textAppearanceSmall"
        android:layout_marginTop="370dp"
        android:layout_marginLeft="20dp"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:progressBarStyle"
        android:layout_marginTop="360dp"
        android:layout_marginLeft="200dp"/>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:progressBarStyleHorizontal"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="10dp"/>
</RelativeLayout>
